# robomaster_cv_infantry

./: CMakeLists.txt  README.md
header/: ArmorDetector.h  GxIAPI.h  Serialport.h  SivirDetector.h  SivirhomeDetector.h  config.h  watchdog.h
source/: ArmorDetector.cpp  CMakeLists.txt  SivirDetector.cpp  SivirhomeDetector.cpp  main.cpp
